[gd_scene load_steps=11 format=2]

[ext_resource path="res://gui_theme.tres" type="Theme" id=1]
[ext_resource path="res://art/joystix monospace.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ScreenToolbox/SizeBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://ScreenToolbox/NewGridDialog.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 11
font_data = ExtResource( 2 )

[node name="NewGridDialog" type="WindowDialog"]
margin_right = 253.0
margin_bottom = 318.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_top = -20.0
margin_right = 253.0
margin_bottom = 298.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 260.0
margin_bottom = 396.0
custom_constants/separation = 19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_left = 49.0
margin_right = 201.0
margin_bottom = 28.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "New Grid"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 250.0
margin_bottom = 100.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 119.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "2D Mode"

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 171.0
margin_right = 201.0
margin_bottom = 30.0
size_flags_horizontal = 6
pressed = true

[node name="Label2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 250.0
margin_bottom = 53.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/normal_font = SubResource( 4 )
text = "position vanishing points."
fit_content_height = true

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 250.0
margin_bottom = 202.0
custom_constants/separation = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
margin_right = 250.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_top = 3.0
margin_right = 119.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 5 )
text = "3D Mode"

[node name="CheckBox2" type="CheckBox" parent="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 171.0
margin_right = 201.0
margin_bottom = 30.0
size_flags_horizontal = 6

[node name="Label" type="RichTextLabel" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
margin_top = 38.0
margin_right = 270.0
margin_bottom = 83.0
rect_min_size = Vector2( 280, 0 )
custom_fonts/normal_font = SubResource( 6 )
text = "Adjustable 3D environment that ensures accurate grid spacing."
fit_content_height = true
scroll_active = false

[node name="SizeBox" parent="PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 221.0
margin_right = 250.0
margin_bottom = 333.0
title = "Size (Px)"
max_value = 4000
min_value = 1
value = 512

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_left = 21.0
margin_top = 352.0
margin_right = 228.0
margin_bottom = 386.0
size_flags_horizontal = 4
custom_constants/separation = 27

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 90.0
margin_bottom = 34.0
text = "Cancel"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 117.0
margin_right = 207.0
margin_bottom = 34.0
text = "Create"

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer2/CheckBox2" to="." method="_on_CheckBox2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
